apt (0.9.3) unstable; urgency=low

  [ David Kalnischkies ]
  * apt-pkg/contrib/strutl.cc:
    - remove the message size limit from ioprintf and strprintf
  * apt-pkg/contrib/configuration.cc:
    - add a more versatile Dump() method
  * apt-pkg/acquire-worker.cc:
    - use Dump() to generate the configuration message for sending
  * cmdline/apt-config.cc:
    - make it possible to limit dump to a subtree
    - implement --empty and --format option for dump
  * apt-pkg/cdrom.cc:
    - use Dump() to generate the configuration output
  * apt-pkg/depcache.cc:
    - clearly separate 'positive' and 'negative' dependencies and
      their upgrade-resolution tries in MarkInstall and especially don't
      treat Conflicts differently compared to Breaks here
  * edsp/edspsystem.cc:
    - check with RealFileExists for scenario file as otherwise a directory
      like one provided with RootDir triggers the usage of EDSP

 -- David Kalnischkies <kalnischkies@gmail.com>  Mon, 23 Apr 2012 18:23:10 +0200

apt (0.9.2) unstable; urgency=low

  [ Michael Vogt ]
  * apt-inst/contrib/extracttar.cc:
    - ensure that in StartGzip the InFd is set to "AutoClose" to ensure
      that the pipe is closed when InFd is closed. This fixes a Fd leak
      (LP: #985452)

  [ David Kalnischkies ]
   * apt-pkg/deb/deblistparser.cc:
    - only treat the native apt as essential by default (Closes: #669377)
  * apt-pkg/contrib/fileutl.cc:
    - redirect stderr from compressors to /dev/null
  * apt-pkg/aptconfiguration.cc:
    - if the compressor is not installed, but we link against it's
      library accept it as a CompressionType (Closes: #669328)
  * apt-pkg/contrib/sha2_internal.cc:
    - do not use the input data directly but memcpy it instead as
      it could be unaligned as in the http-transport which causes
      a sigbus error on sparc (Closes: #669061)
  * apt-pkg/cacheset.cc:
    - actually return to the fallback modifier if we have detected we