@@ -5,6 +5,7 @@ apt (0.9.3) unstable; urgency=low
     - remove the message size limit from ioprintf and strprintf
   * apt-pkg/contrib/configuration.cc:
     - add a more versatile Dump() method
+    - normalize a bit by replacing // and /./ with / in FindFile
   * apt-pkg/acquire-worker.cc:
     - use Dump() to generate the configuration message for sending
   * cmdline/apt-config.cc:
@@ -20,7 +21,7 @@ apt (0.9.3) unstable; urgency=low
     - check with RealFileExists for scenario file as otherwise a directory
       like one provided with RootDir triggers the usage of EDSP
 
- -- David Kalnischkies <kalnischkies@gmail.com>  Mon, 23 Apr 2012 18:23:10 +0200
+ -- David Kalnischkies <kalnischkies@gmail.com>  Mon, 23 Apr 2012 19:10:13 +0200
 
 apt (0.9.2) unstable; urgency=low
 
